fixed spacing

--- a/src/Chart.css
+++ b/src/Chart.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+
 }
 
 #bar-container {
     width: 100%;
     /* margin-top: 50px; */
-    margin-left: 100px;
     padding-top: 10px;
 }
 
