--- a/src/transaction.css
+++ b/src/transaction.css
@@ -1,14 +1,14 @@
 .transaction-main {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
     margin: 20px;
     /* background-color: #F1F4FF; */
-    border-radius: 6px;
     width: 100%;
     margin: 0;
 }
+
 
 .transaction-image {
     width: 30px;
@@ -46,5 +46,8 @@
     .transaction-main {
         width: 100%;
         padding: 20px 0;
+        display: flex;
+        justify-content: space-evenly;
     }
+
 }
